add start to layout

--- a/index.html
+++ b/index.html
@@ -6,14 +6,45 @@
     <title>FAKE Node.js</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- FontAwesome/Normalize/Skeleton/Main CSS -->
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/skeleton.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
+    <script src="scripts/main.js"></script>
 </head>
 <body>
-    <header class="container">
-        TEST STUFF
-    </header>    
+    <section class="top-banner">
+        <header class="container u-full-width">
+            <div class="row">
+                <div class="one-third column offset-by-one-third logo">
+                    <i class="fab fa-node fa-6x"></i>
+                </div>
+            </div>
+            <div class="row">
+                <nav class="eight columns offset-by-two">
+                    <a href="#">link</a>
+                    <a href="#">link</a>
+                    <a href="#">link</a>
+                    <a href="#">link</a>
+                    <a href="#">link</a>
+                    <a href="#">link</a>
+                    <a href="#">link</a>
+                    <a href="#">link</a>
+                </nav>
+            </div>
+        </header>
+    </section>
+    <main class="container">
+        <div class="row">
+            <section class="content twelve columns">
+                <h1 class="title">Node.js® is a JavaScript runtime built on Chrome's V8 JavaScript engine.</h1>
+                <div class="important">
+                    <h1>Important June 2018 security upgrades now available</h1>
+                </div>
+                <h1>Download for macOS (x64)</h1>
+            </section>
+        </div>
+    </main>    
 </body>
 </html>
