--- a/index.html
+++ b/index.html
@@ -37,14 +37,36 @@
     </section>
     <main class="container">
         <div class="row">
-            <section class="content twelve columns">
+            <section class="content ten columns offset-by-one">
                 <h1 class="title">Node.js® is a JavaScript runtime built on Chrome's V8 JavaScript engine.</h1>
                 <div class="important">
                     <h1>Important June 2018 security upgrades now available</h1>
                 </div>
-                <h1>Download for macOS (x64)</h1>
+                <article class="">
+                    <section class="card-head">
+                        <h1>Download for macOS (x64)</h1>
+                    </section>
+                    <section class="card-body">
+                        <div class="download-box">
+                            <a>8.11.3 LTS</a>
+                            <a>Recommended For Most users</a>
+                        </div>
+                        <div class="download-box">
+                            <a>8.11.3 LTS</a>
+                            <a>Recommended For Most users</a>
+                        </div>
+                    </section>
+                </article>
             </section>
         </div>
-    </main>    
+    </main>
+    <footer class="u-full-width">
+        <section class="container">
+            <p>© Node.js Foundation. All Rights Reserved. Portions of this site originally © Joyent. Node.js is a trademark of Joyent, Inc.
+            and is used with its permission. Please review the Trademark Guidelines of the Node.js Foundation. Linux Foundation is a
+            registered trademark of The Linux Foundation. Linux is a registered trademark of Linus Torvalds. Node.js Project Licensing
+            Information.</p>
+        </section>
+    </footer>
 </body>
 </html>
