start footer layout

--- a/index.html
+++ b/index.html
@@ -62,10 +62,23 @@
     </main>
     <footer class="u-full-width">
         <section class="container">
-            <p>© Node.js Foundation. All Rights Reserved. Portions of this site originally © Joyent. Node.js is a trademark of Joyent, Inc.
-            and is used with its permission. Please review the Trademark Guidelines of the Node.js Foundation. Linux Foundation is a
-            registered trademark of The Linux Foundation. Linux is a registered trademark of Linus Torvalds. Node.js Project Licensing
-            Information.</p>
+            <div class="row">
+                <div class="footer-nav">
+                    <div class="footer-brand">
+                        <h1>LINUX FOUNDATION</h1>
+                        <a>
+                        Collaborative Projects</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <section class="footnotes">
+                    <p>© Node.js Foundation. All Rights Reserved. Portions of this site originally © Joyent. Node.js is a trademark of Joyent, Inc.
+                    and is used with its permission. Please review the Trademark Guidelines of the Node.js Foundation. Linux Foundation is a
+                    registered trademark of The Linux Foundation. Linux is a registered trademark of Linus Torvalds. Node.js Project Licensing
+                    Information.</p>
+                </section>
+            </div>
         </section>
     </footer>
 </body>
