remove excess padding/margin on default elements

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
                     </section>
                     <section class="card-body">
                         <div class="download-box">
-                            <a>8.11.3 LTS</a>
-                            <a>Recommended For Most users</a>
+                            <h1>8.11.3 LTS</h1>
+                            <p>Recommended For Most users</p>
                         </div>
                         <div class="download-box">
-                            <a>8.11.3 LTS</a>
-                            <a>Recommended For Most users</a>
+                            <h1>8.11.3 LTS</h1>
+                            <p>Recommended For Most users</p>
                         </div>
                     </section>
                 </article>
@@ -66,8 +66,8 @@
                 <div class="footer-nav">
                     <div class="footer-brand">
                         <h1>LINUX FOUNDATION</h1>
-                        <a>
-                        Collaborative Projects</a>
+                        <p>
+                        Collaborative Projects</p>
                     </div>
                 </div>
             </div>
