complete responsive layout

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
                 </div>
             </div>
             <div class="row">
-                <nav class="eight columns offset-by-two">
-                    <a href="#">link</a>
-                    <a href="#">link</a>
-                    <a href="#">link</a>
-                    <a href="#">link</a>
-                    <a href="#">link</a>
-                    <a href="#">link</a>
-                    <a href="#">link</a>
-                    <a href="#">link</a>
+                <nav class="eight columns offset-by-two u-max-full-width">
+                    <a href="#">link</a><a>|</a>
+                    <a href="#">link</a><a>|</a>
+                    <a href="#">link</a><a>|</a>
+                    <a href="#">link</a><a>|</a>
+                    <a href="#">link</a><a>|</a>
+                    <a href="#">link</a><a>|</a>
+                    <a href="#">link</a><a>|</a>
+                    <a href="#">link</a><a>|</a>
                 </nav>
             </div>
         </header>
@@ -42,19 +42,24 @@
                 <div class="important">
                     <h1>Important June 2018 security upgrades now available</h1>
                 </div>
-                <article class="">
+                <article class="card">
                     <section class="card-head">
                         <h1>Download for macOS (x64)</h1>
                     </section>
                     <section class="card-body">
-                        <div class="download-box">
-                            <h1>8.11.3 LTS</h1>
-                            <p>Recommended For Most users</p>
+                        <div class="download-links">
+                            <div class="download-box">
+                                <h1>8.11.3 LTS</h1>
+                                <p>Recommended For Most users</p>
+                            </div>
                         </div>
-                        <div class="download-box">
-                            <h1>8.11.3 LTS</h1>
-                            <p>Recommended For Most users</p>
+                        <div class="download-links">
+                            <div class="download-box">
+                                <h1>8.11.3 LTS</h1>
+                                <p>Recommended For Most users</p>
+                            </div>
                         </div>
+                
                     </section>
                 </article>
             </section>
@@ -65,17 +70,28 @@
             <div class="row">
                 <div class="footer-nav">
                     <div class="footer-brand">
-                        <h1>LINUX FOUNDATION</h1>
+                        <h1>LINUX FOUNDATION </h1>
                         <p>
-                        Collaborative Projects</p>
+                          Collaborative Projects</p>
                     </div>
+                    <nav class="footer-links">
+                        <a>Report Node.js Issue</a>
+                        <a>|</a>
+                        <a>Report Website Issue</a>
+                        <a>|</a>
+                        <a>Get Help</a>
+                    </nav>
                 </div>
             </div>
             <div class="row">
                 <section class="footnotes">
-                    <p>© Node.js Foundation. All Rights Reserved. Portions of this site originally © Joyent. Node.js is a trademark of Joyent, Inc.
-                    and is used with its permission. Please review the Trademark Guidelines of the Node.js Foundation. Linux Foundation is a
-                    registered trademark of The Linux Foundation. Linux is a registered trademark of Linus Torvalds. Node.js Project Licensing
+                    <p class="copyright">© Node.js Foundation. All Rights Reserved. Portions of this site originally © Joyent.</p>
+                    <p> Node.js is a trademark of Joyent, Inc.
+                    and is used with its permission. Please review the Trademark Guidelines of the Node.js Foundation.</p>
+                    <p> Linux Foundation is a
+                    registered trademark of The Linux Foundation.</p>
+                    <p> Linux is a registered trademark of Linus Torvalds.</p>
+                    <p> Node.js Project Licensing
                     Information.</p>
                 </section>
             </div>
